added signup button

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-buttons>log in</ion-buttons>
+<ion-buttons>sign up</ion-buttons>
 
 <ion-content padding>
   <h3>Ionic Menu Starter</h3>
