--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,6 +9,7 @@
 
 <ion-buttons>log in</ion-buttons>
 <ion-buttons>sign up</ion-buttons>
+<ion-buttons>Sign-in</ion-buttons>
 
 
 <ion-content padding>
