--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
     <ion-title>Testing for Cavalry</ion-title>
   </ion-navbar>
 </ion-header>
-<p>HEllO TESTING</p>
+<p>HEllO TESTING 123</p>
 <ion-buttons>log in</ion-buttons>
 <ion-buttons>sign up</ion-buttons>
 <ion-buttons>Sign-in</ion-buttons>
