--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,9 @@
         .catch(err => console.error('Error', err));
     }
   </script>-->
-
   <link href="build/main.css" rel="stylesheet">
+  <link href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" rel="stylesheet">
+  <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
 
 </head>
 <body>
